# PAOO

src/: CMakeLists.txt
src/classes/: CMakeLists.txt
src_tema1/: main.cpp
src_tema1/classes/: myArray.cpp  myArray.h
src_tema2/: CMakeLists.txt  main.cpp
src_tema2/classes/: CMakeLists.txt  myArray.cpp  myArray.h  myInterface.cpp  myInterface.h  mySecondArray.cpp  mySecondArray.h
src_tema3/: CMakeLists.txt  main.cpp
src_tema3/classes/: StudentService.cpp  StudentService.h
